--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
+    "critters": "^0.0.25",
+    "css-loader": "^7.1.2",
     "next": "15.1.5",
+    "postcss-loader": "^8.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "serve": "^14.2.4",
+    "style-loader": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
