--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "build:css": "npx tailwindcss -o out/globals.css --minify",
-    "deploy": "gh-pages -d out"
+    "deploy": "next build && next export",
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "critters": "^0.0.25",
     "css-loader": "^7.1.2",
-    "next": "15.1.5",
+    "next": "^15.1.6",
     "postcss-loader": "^8.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
