--- a/package.json
+++ b/package.json
@@ -11,16 +11,26 @@
     "deploy": "next build && gh-pages -d out"
   },
   "dependencies": {
+    "@tsparticles/all": "^3.8.0",
+    "@tsparticles/engine": "^3.8.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.0",
+    "@types/react-i18next": "^8.1.0",
     "autoprefixer": "^10.4.20",
     "critters": "^0.0.25",
     "css-loader": "^7.1.2",
+    "i18next": "^24.2.2",
     "next": "^15.1.6",
     "postcss-loader": "^8.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
+    "react-particles": "^2.12.2",
+    "react-tsparticles": "^2.12.2",
     "serve": "^14.2.4",
-    "style-loader": "^4.0.0"
+    "style-loader": "^4.0.0",
+    "tsparticles": "^3.8.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
