--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "next build && gh-pages -d out"
   },
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "@tsparticles/all": "^3.8.0",
     "@tsparticles/engine": "^3.8.0",
     "@tsparticles/react": "^3.0.0",
