--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "^10.4.20",
     "critters": "^0.0.25",
     "css-loader": "^7.1.2",
+    "dotenv": "^16.4.7",
     "i18next": "^24.2.2",
     "next": "^15.1.6",
     "postcss-loader": "^8.1.1",
